...
            actions={[{ label: "Done", onPress: onClose }]}
            keyboardAvoiding
            headerColor={colors.secondaryContainer}
            headerDragGesture={dragGesture}
          >
            <Searchbar
              testID="select-search"
              style={{
                marginHorizontal: SPACING.lg - 14,
              }}
              inputStyle={{ color: colors.onSurface }}
              placeholderTextColor={colors.onSurfaceDisabled}
              value={query}
...
                  {renderItemRight?.(item)}
                </Pressable>
              )}
              ListFooterComponent={
                showAddOrUnavailable ? (
                  <List.Item
                    testID="select-add-custom"
                    title={
                      addingCustom ? (
                        <View style={{ paddingVertical: SPACING.xs }}>
                          <ActivityIndicator
                            color={colors.primary}
                            size="small"
...
