...
      title="Change Gym"
      onConfirm={() => handleEditGym(gymName)}
      confirming={editingGym}
      confirmationDisabled={gymName === currentGym}
    >
      <SearchableSelect
        label="Session Gym"
        value={gymName}
        options={curUser?.options?.gyms || []}
        onSelect={setGymName}
        onAddCustom={handleAddGym}
        canAddCustom
        placeholder="Search or add gym..."
...
